--- a/packages/hygen-oja-generators/_templates/action/new/02-1-action-test-body.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/02-1-action-test-body.ejs
@@ -4,7 +4,7 @@ to: <%=locals.target || '.'%>/__tests__/<%=h.actionName(name)%>.spec.js
 'use strict';
 
 const Assert = require('assert');
-const createContextFactory = require('@ebay/oja-action');
+const { createContext } = require('@ebay/oja-action');
 
 describe(__filename, () => {
 });
