added extension action and got rid of yarn install in unit tests
all test pass now via lerna

--- a/packages/hygen-oja-generators/_templates/action/new/04-2-package-scripts.json.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/04-2-package-scripts.json.ejs
@@ -4,5 +4,5 @@ to: package.json
 after: '"scripts":'
 skip_if: '"test:actions":'
 ---
-    "test:actions": "yarn jest",
-    "test:actions:coverage": "yarn jest --collect-coverage"<%=(!h.isEmptyPath(h.tryRequire(`package.json`), 'scripts') && ',' || '')%>
+    "test:actions": "jest",
+    "test:actions:coverage": "jest --collect-coverage"<%=(!h.isEmptyPath(h.tryRequire(`package.json`), 'scripts') && ',' || '')%>
