added assertions of location action.json vs new action action.json

--- a/packages/hygen-oja-generators/_templates/action/help/index.ejs
+++ b/packages/hygen-oja-generators/_templates/action/help/index.ejs
@@ -1,4 +1,5 @@
 ---
 message: |
-  $ hygen action new {NAMESPACE}/{NAME} [--target <output dir>]
+  $ hygen action new <action namespace> \[--target <output dir>\] - create a new action |
+  $ hygen action init - actions location file action.json with list of directories to search actions in (optional)
 ---
