added mocha test generation option

--- a/packages/hygen-oja-generators/_templates/action/help/index.ejs
+++ b/packages/hygen-oja-generators/_templates/action/help/index.ejs
@@ -1,5 +1,5 @@
 ---
 message: |
-  $ hygen action new <action namespace> \[--target <output dir>\] - create a new action |
+  $ hygen action new <action namespace> \[--target <output dir>\] \[--mocha\] - create a new action |
   $ hygen action init - actions location file action.json with list of directories to search actions in (optional)
 ---
