--- a/packages/hygen-oja-generators/_templates/action/new/02-4-action-test-failure.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/02-4-action-test-failure.ejs
@@ -4,7 +4,7 @@ to: <%=locals.target || '.'%>/__tests__/<%=h.actionName(name)%>.spec.js
 after: describe
 skip_if: 'action <%=name%> should fail'
 ---
-    test('action <%=name%> should fail', async () => {
+    <%= h.testCaseName(locals.mocha) %>('action <%=name%> should fail', async () => {
         const context = await createContext({
             functions: {
                 '<%=name%>': new Error('BOOM')
