--- a/packages/hygen-oja-generators/_templates/action/new/04-1-package-scripts.json.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/04-1-package-scripts.json.ejs
@@ -1,8 +1,3 @@
 ---
-inject: true
-to: package.json
-after: '"version":'
-skip_if: '"scripts":'
+message: <%-h.addScripts() || ''%>
 ---
-  "scripts": {
-  },
