--- a/packages/hygen-oja-generators/_templates/action/new/02-2-action-test.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/02-2-action-test.ejs
@@ -4,7 +4,7 @@ to: <%=locals.target || '.'%>/__tests__/<%=h.actionName(name)%>.spec.js
 after: describe
 skip_if: 'action <%=name%> should be discovered'
 ---
-    test('action <%=name%> should be discovered', async () => {
+    <%= h.testCaseName(locals.mocha) %>('action <%=name%> should be discovered', async () => {
         const context = await createContext();
         Assert.ok(context.action('<%=name%>'));
     });
