--- a/packages/hygen-oja-generators/_templates/action/new/02-3-action-test-call.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/02-3-action-test-call.ejs
@@ -4,7 +4,7 @@ to: <%=locals.target || '.'%>/__tests__/<%=h.actionName(name)%>.spec.js
 after: describe
 skip_if: 'action <%=name%> should be called'
 ---
-    test('action <%=name%> should be called', async () => {
+    <%= h.testCaseName(locals.mocha) %>('action <%=name%> should be called', async () => {
         const context = await createContext();
         Assert.equal(`<%=name%> is called`,
             await context.action('<%=name%>'));
