--- a/packages/hygen-oja-generators/_templates/action/new/05-2-package-jest-match.json.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/05-2-package-jest-match.json.ejs
@@ -3,6 +3,7 @@ inject: true
 to: package.json
 after: '"jest": {'
 skip_if: '"testMatch":'
+message: <%-(!locals.mocha || '')%>
 ---
     "testMatch": [
     ]<%=(!h.isEmptyPath(h.tryRequire(`package.json`), 'jest') && ',' || '')%>
