--- a/packages/hygen-oja-generators/_templates/action/new/03-dependencies-jest.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/03-dependencies-jest.ejs
@@ -1,4 +1,4 @@
 ---
 sh: <%-h.installDependenciesCmd('jest', '-D') %>
-message: <%-(!locals.skipinstall && locals.mocha && ('installing required dependencies -> ' + h.installDependenciesCmd('jest', '-D')) || '')%>
+message: <%-(!locals.skipinstall && !locals.mocha && ('installing required dependencies -> ' + h.installDependenciesCmd('jest', '-D')) || '')%>
 ---
