--- a/packages/hygen-oja-generators/_templates/action/new/05-1-package-jest.json.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/05-1-package-jest.json.ejs
@@ -3,7 +3,7 @@ inject: true
 to: package.json
 before: '"scripts":'
 skip_if: '"jest": {'
-message: <%-(!locals.mocha || '')%>
+message: <%-(!locals.mocha && 'adding jest configuration section' || '')%>
 ---
   "jest": {
   },
