--- a/packages/hygen-oja-generators/_templates/action/new/05-3-package-add-jest.json.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/05-3-package-add-jest.json.ejs
@@ -2,6 +2,6 @@
 inject: true
 to: package.json
 after: '"testMatch": \['
-message: <%-!locals.mocha && h.getTestMatch(locals.mocha && 'mocha') && 'configuring jest tests' || ''%>
+message: <%-!locals.mocha && h.getTestMatch() && 'configuring jest tests' || ''%>
 ---
-      <%-h.getTestMatch(locals.mocha && 'mocha' || '')-%>
+      <%-h.getTestMatch()-%>
