--- a/packages/hygen-oja-generators/_templates/action/new/04-2-package-scripts.json.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/04-2-package-scripts.json.ejs
@@ -8,7 +8,7 @@ skip_if: '"test:actions":'
 const comma = (!h.isEmptyPath(h.tryRequire(`package.json`), 'scripts') && ',' || '');
 if (locals.mocha) {
 -%>
-    "test:actions": "mocha <%-h.getTestMatch('mocha')%> --exit timeout 10000",
+    "test:actions": "mocha <%-h.getTestMatch('mocha')%> --exit --timeout 10000",
     "test:actions:coverage": "nyc npm run test:actions"<%=comma%><%
 } else {
 -%>
