--- a/packages/hygen-oja-generators/_templates/action/new/03-dependencies-mocha.ejs
+++ b/packages/hygen-oja-generators/_templates/action/new/03-dependencies-mocha.ejs
@@ -1,4 +1,4 @@
 ---
 sh: <%-h.installDependenciesCmd('mocha', '-D') %>
-message: <%-(!locals.skipinstall && locals.mocha && ('installing required dependencies -> ' + h.installDependenciesCmd('mocha')) || '')%>
+message: <%-(!locals.skipinstall && h.detectedTestFramework(locals) === 'mocha' && ('installing required dependencies -> ' + h.installDependenciesCmd('mocha')) || '')%>
 ---
